--- a/about.html
+++ b/about.html
@@ -8,6 +8,6 @@
     <title>About Us</title>
 </head>
 <body>
-    <p>Hello World. Testing out merge request.</p>
+    <p>Hello World. Testing out merge request. Making another change</p>
 </body>
 </html>
