--- a/about.html
+++ b/about.html
@@ -1,13 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <title>About Us</title>
 </head>
+
 <body>
-    
+    <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Kid Clothing</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            Shop
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Babies</a></li>
+                            <li><a class="dropdown-item" href="#">Toddler Boys</a></li>
+                            <li><a class="dropdown-item" href="#">Toddler Girls</a></li>
+                            <li><a class="dropdown-item" href="#">Boys</a></li>
+                            <li><a class="dropdown-item" href="#">Girls</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link">Help</a>
+                    </li>
+                </ul>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+            </div>
+        </div>
+    </nav>
+
+    <div class="container text-center">
+        <div class="row">
+          <div class="col">
+            <h2>Our Story</h2>
+            <div><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam id, voluptate quia dicta voluptatum dignissimos excepturi dolorum repellendus! Praesentium error asperiores hic commodi iste magni voluptatum dolore facere deleniti quas!</p></div>
+          </div>
+          <div class="col">
+            <img class="img-fluid" src="https://plus.unsplash.com/premium_photo-1658526984286-9adf23e01146?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1479&q=80" alt="Kid clothing">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <img class="img-fluid" src="https://media.istockphoto.com/photos/cute-little-boy-is-playing-with-big-bubbles-outdoor-picture-id1253609236?s=612x612" alt="Kid clothing">
+          </div>
+          <div class="col">
+            <h2>Our Impact</h2>
+            <div><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam id, voluptate quia dicta voluptatum dignissimos excepturi dolorum repellendus! Praesentium error asperiores hic commodi iste magni voluptatum dolore facere deleniti quas!</p></div>
+          </div>
+
+        </div>
+      </div>
+
+
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
