--- a/home.html
+++ b/home.html
@@ -28,18 +28,16 @@
               <div class="collapse navbar-collapse" id="navbarScroll">
                 <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="home.html">Home</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="aboutus.html">About Us</a>
-                  </li>
+
                   <!--dropdown is not working-->
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" 
-                    role="button" data-bs-toggle="dropdown" aria-expanded="true">
+                    role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Shop
                     </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="#">Baby</a></li>
                         <li><a class="dropdown-item" href="#">Toddler Boy</a></li>
                         <li><a class="dropdown-item" href="#">Toddler Girl</a></li>
@@ -47,6 +45,11 @@
                         <li><a class="dropdown-item" href="#">Girl</a></li>
                         </ul>
                   </li>
+
+                  <li class="nav-item">
+                    <a class="nav-link" href="aboutus.html">About Us</a>
+                  </li>
+                  
                   <li class="nav-item">
                     <a class="nav-link">Help</a>
                   </li>
@@ -155,13 +158,13 @@
 
           <ul class="list-unstyled">
             <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fas fa-paw pe-3"></i>Home</a>
+              <a href="home.html" class="text-white"><i class="fas fa-paw pe-3"></i>Home</a>
             </li>
             <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fas fa-paw pe-3"></i>About us</a>
+              <a href="#" class="text-white"><i class="fas fa-paw pe-3"></i>Shop</a>
             </li>
             <li class="mb-2">
-              <a href="#!" class="text-white"><i class="fas fa-paw pe-3"></i>Shop</a>
+              <a href="aboutus.html" class="text-white"><i class="fas fa-paw pe-3"></i>About us</a>
             </li>
             <li class="mb-2">
               <a href="#!" class="text-white"><i class="fas fa-paw pe-3"></i>Help</a>
@@ -219,11 +222,8 @@
     <!-- Copyright -->
   </footer>
 
-    
-
-
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 
 </body>
 </html>
