--- a/categories.html
+++ b/categories.html
@@ -19,9 +19,74 @@
 
 <body>
 
+  <section class="topnav">
 
+    <nav class="navbar navbar-expand-lg bg-light">
+        <nav class="navbar bg-light">
+            <div class="container">
+              <a class="navbar-brand" href="#">
+                <img src="img/home/logo.png" alt="logo" width="60" height="60">
+              </a>
+            </div>
+          </nav>
+
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Welcome to MiniBoss!</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarScroll">
+            <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="home.html">Home</a>
+              </li>
+
+              <!--dropdown is not working-->
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" 
+                role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Shop
+                </a>
+                    <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="./categories.html"">Baby</a></li>
+                    <li><a class="dropdown-item" href="./categories.html"">Toddler Boy</a></li>
+                    <li><a class="dropdown-item" href="./categories.html"">Toddler Girl</a></li>
+                    <li><a class="dropdown-item" href="./categories.html"">Boy</a></li>
+                    <li><a class="dropdown-item" href="./categories.html"">Girl</a></li>
+                    </ul>
+              </li>
+
+              <li class="nav-item">
+                <a class="nav-link" href="aboutus.html">About Us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="login.html">Login</a>
+              </li>
+              
+              <li class="nav-item">
+                <a class="nav-link">Help</a>
+              </li>
+            </ul>
+            <form class="d-flex" role="search">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+          </div>
+        </div>
+
+        <nav class="navbar bg-light">
+            <div class="container">
+              <a class="navbar-brand" href="#">
+                <img src="img/home/bag.png" alt="shoppingbag" width="60" height="60">
+              </a>
+            </div>
+          </nav>
+      </nav>
+</section>
 
   <main>
+
+
 
     <div class="d-flex justify-content-center">
 
@@ -46,8 +111,8 @@
         </div>
 
         <div class="dropdown m-3">
-          <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton1"
-            data-bs-toggle="dropdown" aria-expanded="false">
+          <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown"
+            aria-expanded="false">
             Size
           </button>
           <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
@@ -61,40 +126,30 @@
         </div>
 
         <div class="dropdown m-3">
-          <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton1"
-            data-bs-toggle="dropdown" aria-expanded="false">
+          <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown"
+            aria-expanded="false">
             Price
           </button>
           <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+            <li><a class="dropdown-item" href="#">$1 - $10</a></li>
+            <li><a class="dropdown-item" href="#">$11 - $20</a></li>
+            <li><a class="dropdown-item" href="#">$21 - $50</a></li>
           </ul>
         </div>
 
         <div class="dropdown m-3">
-          <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton1"
-            data-bs-toggle="dropdown" aria-expanded="false">
+          <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown"
+            aria-expanded="false">
             Gender
           </button>
           <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+            <li><a class="dropdown-item" href="#">Boys</a></li>
+            <li><a class="dropdown-item" href="#">Girls</a></li>
+            
           </ul>
         </div>
 
-        <div class="dropdown m-3">
-          <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton1"
-            data-bs-toggle="dropdown" aria-expanded="false">
-            Multipacks
-          </button>
-          <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </div>
+
       </div>
       <div class="justify-self-center">
         <div class="container">
@@ -170,7 +225,7 @@
                   class="card-img-top img-fluid" alt="...">
                 <div class="card-body">
                   <h5 class="card-title text-danger">$11.48</h5>
-                  <p class="card-text">Unisex Baby And Toddler Alphabet Snug Fit Cotton One Piece Pajamas - Thunder Blue
+                  <p class="card-text">Snug Fit Cotton One Piece Pajamas
                   </p>
                   <div class="text-center mt-5">
                     <a href="#" class="btn btn-warning">Add to Card</a>
@@ -204,7 +259,7 @@
                   class="card-img-top img-fluid" alt="...">
                 <div class="card-body">
                   <h5 class="card-title text-danger">$19.98</h5>
-                  <p class="card-text">Baby Girls Plaid Bodysuit Dress 2-Pack</p>
+                  <p class="card-text">Baby Girls Plaid Bodysuit Dress</p>
                   <div class="text-center mt-5">
                     <a href="#" class="btn btn-warning">Add to Card</a>
                   </div>
@@ -220,7 +275,7 @@
                   class="card-img-top img-fluid" alt="...">
                 <div class="card-body">
                   <h5 class="card-title text-danger">$16.48</h5>
-                  <p class="card-text">Baby And Toddler Girls Snowflake Knit To Woven Dress</p>
+                  <p class="card-text">Snowflake Knit To Woven Dress</p>
                   <div class="text-center mt-5">
                     <a href="#" class="btn btn-warning">Add to Card</a>
                   </div>
@@ -244,10 +299,157 @@
 
   </main>
 
+  <footer class="bg-warning text-center text-lg-start text-white">
+    <!-- Grid container -->
+    <div class="container p-4">
+      <!--Grid row-->
+      <div class="row my-4">
+        <!--Grid column-->
+        <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+
+          <div class="rounded-circle bg-white shadow-1-strong d-flex align-items-center justify-content-center mb-4 mx-auto" style="width: 150px; height: 150px;">
+            <img src="img/home/logo.png" height="100" alt="logo"
+                 loading="lazy" />
+          </div>
+
+   <!-- Section: Form -->
+   <section class="">
+    <form action="">
+      <!--Grid row-->
+      <div class="row d-flex justify-content-center">
+        <!--Grid column-->
+        <div class="col-auto">
+          <p class="pt-2">
+            <strong>Sign up for our newsletter</strong>
+          </p>
+        </div>
+        <!--Grid column-->
+
+        <!--Grid column-->
+        <div class="col-md-5 col-12">
+          <!-- Email input -->
+          <div class="form-outline form-white mb-4">
+            <input type="email" id="form5Example2" class="form-control" value="Enter Email"/>
+            <label class="form-label" for="form5Example2"></label>
+          </div>
+        </div>
+        <!--Grid column-->
+
+        <!--Grid column-->
+        <div class="col-auto">
+          <!-- Submit button -->
+          <button type="submit" class="btn btn-outline-light mb-4">
+            Subscribe
+          </button>
+        </div>
+        <!--Grid column-->
+      </div>
+      <!--Grid row-->
+    </form>
+  </section>
+  <!-- Section: Form -->
+
+
+
+          <ul class="list-unstyled d-flex flex-row justify-content-center">
+            <li>
+              <a class="text-white px-2" href="#!">
+                <i class="fab fa-facebook-square"></i>
+              </a>
+            </li>
+            <li>
+              <a class="text-white px-2" href="#!">
+                <i class="fab fa-instagram"></i>
+              </a>
+            </li>
+            <li>
+              <a class="text-white ps-2" href="#!">
+                <i class="fab fa-youtube"></i>
+              </a>
+            </li>
+          </ul>
+
+        </div>
+        <!--Grid column-->
+
+        <!--Grid column-->
+        <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+          <h5 class="text-uppercase mb-4">Menu</h5>
+
+          <ul class="list-unstyled">
+            <li class="mb-2">
+              <a href="home.html" class="text-white"><i class="fas fa-paw pe-3"></i>Home</a>
+            </li>
+            <li class="mb-2">
+              <a href="./categories.html" class="text-white"><i class="fas fa-paw pe-3"></i>Shop</a>
+            </li>
+            <li class="mb-2">
+              <a href="aboutus.html" class="text-white"><i class="fas fa-paw pe-3"></i>About us</a>
+            </li>
+            <li class="mb-2">
+              <a href="#!" class="text-white"><i class="fas fa-paw pe-3"></i>Help</a>
+            </li>
+          </ul>
+        </div>
+        <!--Grid column-->
+
+        <!--Grid column-->
+        <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+          <h5 class="text-uppercase mb-4">MiniBoss</h5>
+
+          <ul class="list-unstyled">
+            <li class="mb-2">
+              <a href="#!" class="text-white"><i class="fas fa-paw pe-3"></i>Privacy and Terms</a>
+            </li>
+            <li class="mb-2">
+              <a href="#!" class="text-white"><i class="fas fa-paw pe-3"></i>Career</a>
+            </li>
+            <li class="mb-2">
+              <a href="#!" class="text-white"><i class="fas fa-paw pe-3"></i>Contact Us</a>
+            </li>
+            </li>
+          </ul>
+        </div>
+        <!--Grid column-->
+
+        <!--Grid column-->
+        <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+          <h5 class="text-uppercase mb-4">Contact</h5>
+
+          <ul class="list-unstyled">
+            <li>
+              <p><i class="fas fa-map-marker-alt pe-2"></i>123 Street</p>
+            </li>
+            <li>
+              <p><i class="fas fa-phone pe-2"></i>555-555-5555</p>
+            </li>
+            <li>
+              <p><i class="fas fa-envelope pe-2 mb-0"></i>contact@example.com</p>
+            </li>
+          </ul>
+        </div>
+        <!--Grid column-->
+      </div>
+      <!--Grid row-->
+    </div>
+    <!-- Grid container -->
+
+    <!-- Copyright -->
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+      © 2022 Copyright:
+      <a class="text-white" href="#">MiniBoss</a>
+    </div>
+    <!-- Copyright -->
+  </footer>
+
   <!-- JavaScript Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
     crossorigin="anonymous"></script>
+
+  <script src="./js/itemsController.js"></script>
+  <script src="./js/index.js"></script>
+
 
 
 
