add photos to categories.html and finish task 4 and task 5

--- a/aboutus.html
+++ b/aboutus.html
@@ -44,10 +44,10 @@
                     </a>
                         <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="./categories.html">Baby</a></li>
-                        <li><a class="dropdown-item" href="./categories.html"">Toddler Boy</a></li>
-                        <li><a class="dropdown-item" href="./categories.html"">Toddler Girl</a></li>
-                        <li><a class="dropdown-item" href="./categories.html"">Boy</a></li>
-                        <li><a class="dropdown-item" href="./categories.html"">Girl</a></li>
+                        <li><a class="dropdown-item" href="./categories.html">Toddler Boy</a></li>
+                        <li><a class="dropdown-item" href="./categories.html">Toddler Girl</a></li>
+                        <li><a class="dropdown-item" href="./categories.html">Boy</a></li>
+                        <li><a class="dropdown-item" href="./categories.html">Girl</a></li>
                         </ul>
                   </li>
     
