--- a/login.html
+++ b/login.html
@@ -47,11 +47,11 @@
                   Shop
                 </a>
                     <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="./categories.html"">Baby</a></li>
-                    <li><a class="dropdown-item" href="./categories.html"">Toddler Boy</a></li>
-                    <li><a class="dropdown-item" href="./categories.html"">Toddler Girl</a></li>
-                    <li><a class="dropdown-item" href="./categories.html"">Boy</a></li>
-                    <li><a class="dropdown-item" href="./categories.html"">Girl</a></li>
+                    <li><a class="dropdown-item" href="./categories.html">Baby</a></li>
+                    <li><a class="dropdown-item" href="./categories.html">Toddler Boy</a></li>
+                    <li><a class="dropdown-item" href="./categories.html">Toddler Girl</a></li>
+                    <li><a class="dropdown-item" href="./categories.html">Boy</a></li>
+                    <li><a class="dropdown-item" href="./categories.html">Girl</a></li>
                     </ul>
               </li>
 
@@ -234,7 +234,7 @@
               <a href="home.html" class="text-white"><i class="fas fa-paw pe-3"></i>Home</a>
             </li>
             <li class="mb-2">
-              <a href="./categories.html"" class="text-white"><i class="fas fa-paw pe-3"></i>Shop</a>
+              <a href="./categories.html" class="text-white"><i class="fas fa-paw pe-3"></i>Shop</a>
             </li>
             <li class="mb-2">
               <a href="aboutus.html" class="text-white"><i class="fas fa-paw pe-3"></i>About us</a>
