--- a/home.html
+++ b/home.html
@@ -50,6 +50,9 @@
                     <a class="nav-link" href="./aboutus.html">About Us</a>
                   </li>
                   <li class="nav-item">
+                    <a class="nav-link" href="item-form.html">Add Product</a>
+                  </li>
+                  <li class="nav-item">
                     <a class="nav-link" href="login.html">Login</a>
                   </li>
                   
