--- a/aboutus.html
+++ b/aboutus.html
@@ -56,6 +56,10 @@
                   </li>
 
                   <li class="nav-item">
+                    <a class="nav-link" href="item-form.html">Add Product</a>
+                  </li>
+
+                  <li class="nav-item">
                     <a class="nav-link" href="login.html">Login</a>
                   </li>
                   
