--- a/categories.html
+++ b/categories.html
@@ -60,6 +60,11 @@
             <li class="nav-item">
               <a class="nav-link" href="aboutus.html">About Us</a>
             </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="item-form.html">Add Product</a>
+            </li>
+
             <li class="nav-item">
               <a class="nav-link" href="login.html">Login</a>
             </li>
