--- a/login.html
+++ b/login.html
@@ -60,6 +60,10 @@
               </li>
 
               <li class="nav-item">
+                <a class="nav-link" href="item-form.html">Add Product</a>
+              </li>
+
+              <li class="nav-item">
                 <a class="nav-link" href="login.html">Login</a>
               </li>
               
